--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>I am Jo-an</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="myCss.css" />
+    <script src="main.js"></script>
+
+</head>
+
+<body>
+    <h1 class="myH1">Hello World</h1>
+    <h2>How are you</h2>
+    <p class="myClass">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis fuga aut sequi maiores consequuntur possimus laboriosam vero hic, excepturi itaque voluptatibus, animi dolorem. Voluptates error sint provident quam voluptatibus nulla.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis quia asperiores laboriosam. Labore voluptates id consequuntur neque, pariatur perferendis, doloremque dicta modi expedita dolor quo cum qui sed aperiam. Perspiciatis.</p>
+    <p class="myClass myClass2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis nam veritatis quos officiis fuga, exercitationem animi? Repellat nemo quia voluptate officiis accusantium soluta, doloribus provident impedit neque rerum, molestias ab!</p>
+    <p id="myId">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus, repudiandae non magnam libero aliquid excepturi nesciunt voluptates tempore voluptatum nostrum pariatur, minima atque ut molestias eius error perferendis quasi. Distinctio!</p>
+
+</body>
+
+</html>
